tests/neg-custom-args/captures/delayedRunops.check
-- Error: tests/neg-custom-args/captures/delayedRunops.scala:17:13 -----------------------------------------------------
17 |      runOps(ops1)  // error
   |             ^^^^
   |             Local reach capability ops* leaks into capture scope of method delayedRunOps1.
   |             To allow this, the parameter ops should be declared with a @use annotation
-- Error: tests/neg-custom-args/captures/delayedRunops.scala:29:13 -----------------------------------------------------
29 |      runOps(ops1)  // error
   |             ^^^^
   |             Local reach capability ops* leaks into capture scope of method delayedRunOps3.
   |             To allow this, the parameter ops should be declared with a @use annotation
-- Error: tests/neg-custom-args/captures/delayedRunops.scala:22:16 -----------------------------------------------------
22 |      val ops1: List[() => Unit] = ops // error
   |                ^^^^^^^^^^^^^^^^
   |                Separation failure: value ops1's type List[box () => Unit] hides non-local parameter ops
